$Id$

2016-04-09  Christian Franke  <franke@computer.org>

	smartctl.8.in, smartd.8.in, smartd.conf.5.in: Document NVMe
	support for Windows.

	nvmecmds.cpp, os_win32.cpp: Use NSID=0 for Identify Controller
	command.  This fixes NVMe access via Samsung driver on Windows.

2016-04-08  Christian Franke  <franke@computer.org>

	os_win.cpp: Add initial NVMe support for Windows.
	Successfully tested with Intel driver.
	Does not work with Samsung driver.

	Thanks to Minkyu Kim for testing.

2016-04-02  Christian Franke  <franke@computer.org>

	Fix memory leak if get_sat_device() is called with unknown 'type':
	scsiata.cpp: get_sat_device(): Delete 'scsidev' on error.
	dev_interface.h: Update documentation of get_sat_device().
	dev_interface.cpp: Fix use of get_sat_device().
	(All other uses of get_sat_device() are already sane).

	dev_interface.cpp, dev_interface.h: Add counter for objects derived
	from 'smart_device'.
	smartctl.cpp, smartd.cpp: Print error message if any objects remain
	on exit.

	os_linux.cpp: linux_megaraid_device: Remove unused member variable
	'm_busnum' (clang++: -Wunused-private-field) and the related ctor
	parameter.

	os_linux.cpp: Fixes suggested by clang analyser:
	Add or remove inconsistent nullptr checks.
	Remove dead increments.

2016-04-01  Douglas Gilbert  <dgilbert@interlog.com>

	scsiprint.cpp: add missing commas in peripheral_dt_arr and
        add number of elements (2**5) so that won't happen again.

2016-03-31  Alex Samorukov  <samm@os2.kiev.ua>

	drivedb.h: 
	 - add samsung SAMSUNG-MZ7PC series (ticket #679)
	 - add KINGSTON SKC400S37128G (SSDNow KC400) (ticket #673, patch provided
	   by the reporter)
	 - add SanDisk SSD Plus series (ticket #674)
	 - add XceedIOPS SSD series (ticket #672)
	 - add Crucial BX200 SSD (ticket #643)

2016-03-30  Christian Franke  <franke@computer.org>

	Add support for multiple '-d TYPE' options for device scanning:
	dev_interface.cpp, dev_interface.cpp: Add new version of